    error on the mountpoints page if running on powerpc and there is no HFS
    partition with the boot flag set. Treat HFS partitions with the boot
    flag set as NewWorld bootstrap partitions (closes: Malone #43768).
  * GTK frontend: Add a keyboard variant selector (closes: Malone #61729).
    (The same needs to be done for the KDE frontend.)

  [ Jonathan Riddell ]
  * KDE Frontend:
   - Add ensureItemVisible in set_keyboard (closes: Malone #61710).

 -- Colin Watson <cjwatson@ubuntu.com>  Sun,  1 Oct 2006 21:40:35 +0100

ubiquity (1.1.25) edgy; urgency=high

  * Not knowing the filesystem type for a partition apparently doesn't
    necessarily mean that it's unformatted, so don't format partitions
    without a detected filesystem type (closes: Malone #61732).

 -- Colin Watson <cjwatson@ubuntu.com>  Wed, 27 Sep 2006 16:51:57 +0100

ubiquity (1.1.24) edgy; urgency=low

  * Mark console-setup/layout and console-setup/variant as unseen before
    starting console-setup, to avoid incorrect variant choices (although I
    think there's also a console-setup bug here in that the variants are
    being substituted in the wrong order).
  * Depend on a version of console-setup without the misguided
    /etc/X11/xorg.conf handling.
  * Automatic update of included source packages: partman-target 45ubuntu3.

 -- Colin Watson <cjwatson@ubuntu.com>  Tue, 26 Sep 2006 23:29:53 +0100

ubiquity (1.1.23) edgy; urgency=low

  * Move /etc/default/console-setup aside before running the keyboard
    configuration page, to avoid console-setup thinking that it's already
    configured and behaving differently.
  * Automatic update of included source packages: console-setup 1.7ubuntu12,
    partman-basicfilesystems 47ubuntu3, partman-target 45ubuntu2.

 -- Colin Watson <cjwatson@ubuntu.com>  Mon, 25 Sep 2006 13:11:27 +0100

ubiquity (1.1.22) edgy; urgency=low

  [ Jonathan Riddell ]
  * KDE Frontend:
    - Make the mountpoints page use a scroll view

  [ Colin Watson ]